fix: spacing issue

--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -16,14 +16,14 @@
   background: #f9f9f9;
 }
 
-body {
+/* body {
   font-size: 1.6rem;
   background: var(--bg);
   padding: 10px;
   font-family: "Japan Ramen";
   background-color: beige;
-}
-.slider{ 
+} */
+.slider {
   font-size: 50.5%;
   scroll-behavior: smooth;
   margin: 50px;
@@ -31,7 +31,7 @@ body {
   box-sizing: border-box;
   list-style-type: none;
   --primary: #131316;
-  --white:beige;
+  --white: beige;
   --bg: beige;
 }
 
@@ -54,14 +54,14 @@ body {
 }
 
 .swiper-slide {
-  width: 300px;           
-  height: 370px;          
-  background-color: #060505; 
-  border-radius: 16px;   
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
-  overflow: hidden;      
+  width: 300px;
+  height: 370px;
+  background-color: #060505;
+  border-radius: 16px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: transform 0.3s ease;
@@ -99,15 +99,15 @@ body {
 .slider-controler {
   pointer-events: all;
   position: absolute;
-  top: 50%; 
+  top: 50%;
   left: 0;
   right: 0;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   pointer-events: none;
   z-index: 10;
   padding: 1rem 1rem;
-  align-items:center;
+  align-items: center;
 }
 
 .slide-card img {
@@ -139,18 +139,18 @@ body {
 }
 
 .slider-controler .swiper-button-next {
-   pointer-events: all;
+  pointer-events: all;
   left: 58% !important;
   transform: translateX(-58%) !important;
 }
 
 .slider-controler .swiper-button-prev {
-   pointer-events: all;
+  pointer-events: all;
 }
 
 @media (max-width: 990px) {
   .slider-controler .swiper-button-next {
-     pointer-events: all;
+    pointer-events: all;
     left: 70% !important;
     transform: translateX(-70%) !important;
   }
@@ -158,7 +158,7 @@ body {
 
 @media (max-width: 450px) {
   .slider-controler .swiper-button-next {
-     pointer-events: all;
+    pointer-events: all;
     left: 80% !important;
     transform: translateX(-80%) !important;
   }
@@ -174,7 +174,7 @@ body {
 
 @media (max-width: 450px) {
   .slider-controler .swiper-button-prev {
-     pointer-events: all;
+    pointer-events: all;
     left: 20% !important;
     transform: translateX(-20%) !important;
   }
@@ -196,7 +196,7 @@ body {
 }
 
 .slider-controler .slider-arrow::after {
-  content: '';
+  content: "";
 }
 
 .swiper-pagination {
@@ -214,5 +214,5 @@ body {
 }
 
 .swiper-pagination .swiper-pagination-bullet-active {
-  background:var(black);
+  background: var(black);
 }
